# anyreboot

./: Makefile  README.md  README.org  go.mod  main.go  pyproject.toml
cmd/: root.go
src/anyreboot/: __init__.py  __main__.py
src/anyreboot/templates/: main.txt  mymain.tmpl
